# carla-rl

./: .gitignore  README.md  benchmark_carla_fps.py  client_example.py  play.py  pyproject.toml  requirements.txt  server_utils.py  train_rl.py
agents/rl_birdview/: rl_birdview_agent.py
agents/rl_birdview/models/: distributions.py  ppo.py  ppo_buffer.py  ppo_policy.py  torch_layers.py  torch_util.py
agents/rl_birdview/utils/: rl_birdview_wrapper.py  wandb_callback.py
birds_eye_view/: birdview_map_opencv.py  traffic_light.py  transforms.py
birds_eye_view/maps_2.0ppm/: Town01.h5  Town02.h5  Town03.h5  Town04.h5  Town05.h5  Town06.h5  Town10HD.h5  Town15.h5
birds_eye_view/maps_5.0ppm/: Town03.h5  Town05.h5  Town07.h5  Town10HD.h5
birds_eye_view/maps_8.0ppm/: Town01.h5  Town02.h5  Town03.h5  Town04.h5  Town06.h5  Town10HD.h5  Town12.h5  Town13.h5
carla_env/: __init__.py
carla_env/v1/envs/: __init__.py  carla_env.py
carla_env/v1/utils/: client_utils.py  config_utils.py  dynamic_weather.py  expert_noiser.py  server_utils.py  traffic_light.py  transforms.py
carla_env/v2/envs/: __init__.py  carla_env.py
carla_env/v2/runtime/: async_logger.py  carla_client.py  carla_runtime.py  carla_server.py  handler_registry.py  time_manager.py
carla_env/v2/utils/: dynamic_weather.py  hazard_actor.py  port.py  traffic_light.py  transforms.py
carla_gym/: carla_multi_agent_env.py
carla_gym/core/obs_manager/: obs_manager_handler.py
carla_gym/utils/: birdview_map.py  config_utils.py
config/: train_rl_local.yaml
config/train_envs/: endless_all.yaml  endless_dev.yaml
(+119 files in other folders)
